# ava

./: .gitmodules  CMakeLists.txt
cava/nightwatch/generator/c/: cmakelists.py
guestlib/src/: init.cpp
include/: thread_state_singleton.h
worker/: CMakeLists.txt
worker/galvanic/: CMakeLists.txt  README.md  daemon_service.proto
worker/legacy/: manager.cpp
